--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.servlet.session.tracking-modes=cookie
+spring.messages.fallback-to-system-locale=false
+openWeatherMapURL=http://api.openweathermap.org/data/2.5/weather\
+?q={plaats}&units=metric&APPID=c512b6dabe27de8304222f538010dd4b
